# rysgally-hasap-market

./: .env  .tauriignore  README.md  build-and-run.sh  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/rysgally-hasap-market/: README.md  temp_routes.php
src-tauri/resources/rysgally-hasap-market/app/: about_us_routes.txt  document.txt
src-tauri/resources/rysgally-hasap-market/app/Models/: Employee.php  Expense.php  License.php  Product.php  ProductBarcode.php  Sale.php  Shift.php  Storage.php  Supplier.php  Till.php  User.php  WholesaleInvoice.php  WholesaleItem.php  WholesaleMarketTransfer.php  WholesaleStorage.php
src-tauri/resources/rysgally-hasap-market/app/Providers/: AppServiceProvider.php
src-tauri/resources/rysgally-hasap-market/app/Services/: ScaleService.php
src-tauri/resources/rysgally-hasap-market/app/Support/: helpers.php
src-tauri/resources/rysgally-hasap-market/bootstrap/: app.php
src-tauri/resources/rysgally-hasap-market/config/: app.php  database.php  scale.php
src-tauri/resources/rysgally-hasap-market/database/migrations/: 2026_01_27_101355_create_suppliers_table.php  2026_01_27_101411_create_products_table.php  2026_01_27_101428_create_storages_table.php  2026_01_27_101442_create_sales_table.php  2026_01_27_101457_create_employees_table.php  (+18 more)
src-tauri/resources/rysgally-hasap-market/public/: draft.txt  index.php
src-tauri/resources/rysgally-hasap-market/routes/: api.php  web.php
src-tauri/src/: main.rs
(+67 files in other folders)
